# KalaLua

./: CMakeLists.txt  README.md  manifest.kmf  mf_linux.kmf  mf_win.kmf  project.kmake
_external_shared/lua/: BUILD.md
docs/: external_libraries.md
include/core/: kl_lua.hpp
src/core/: kl_core.cpp  kl_lua.cpp
test_project/: CMakeLists.txt
test_project/_external_shared/KalaLua/: readme.md
test_project/_external_shared/KalaLua/debug/: KalaLua1d.lib
test_project/_external_shared/KalaLua/include/core/: kl_lua.hpp
test_project/_external_shared/KalaLua/release/: KalaLua1.lib
test_project/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.ninja  cmake_install.cmake  test-project.lib
test_project/files/scripts/: test.lua
test_project/src/: main.cpp
